<resources>
    <string name="app_name">NasaDemo2</string>
    <string name="missions_schedules_sightings_text">
        Missions\nSchedules\nSightings
    </string>
    <string name="video_text">
        Videos
    </string>
    <string name="image_text">
        Images
    </string>
    <string name="nasa_logo">Nasa logo</string>
    <string name="nasa">NASA</string>
    <string name="menu_button">Menu Button</string>
</resources>