<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <RelativeLayout
        android:id="@+id/home_page"
        android:layout_width="360dp"
        android:layout_height="800dp"
        android:clipToOutline="true"
        android:background="#555E88"
        tools:targetApi="s"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/background"
        android:layout_width="360dp"
        android:layout_height="780dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:clipToOutline="true"
        android:background="@drawable/background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <ImageView
        android:id="@+id/content_scr"
        android:layout_width="340dp"
        android:layout_height="688dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="73dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <RelativeLayout
        android:id="@+id/live_feeds"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="11dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="653dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="19dp"
        android:clipToOutline="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <ImageView
        android:id="@+id/nasa_live_i"
        android:layout_width="339dp"
        android:layout_height="254.25dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-73dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <ImageView
        android:id="@+id/live_icon"
        android:layout_width="29dp"
        android:layout_height="29dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="259dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />
    <ImageView
        android:id="@+id/icons8_live"
        android:layout_width="29dp"
        android:layout_height="29dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="294dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />
    <RelativeLayout
        android:id="@+id/missions_schedules_sightings"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="11dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="521dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="151dp"
        android:clipToOutline="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />
    <ImageView
        android:id="@+id/missions_schedules_sightings_thumbnail"
        android:layout_width="339dp"
        android:layout_height="454.87dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-127dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/missions_schedules_sightings_text"
        android:layout_width="125dp"
        android:layout_height="61dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="14dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:text="@string/missions_schedules_sightings_text"
        android:textAppearance="@style/missions_schedules_sightings_style"
        android:gravity="top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <RelativeLayout
        android:id="@+id/videos"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="11dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="389dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="283dp"
        android:clipToOutline="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />
    <ImageView
        android:id="@+id/video_thumbnail_homepage"
        android:layout_width="339dp"
        android:layout_height="225.61dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="339dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-108dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />
    <TextView
        android:id="@+id/videos_text"
        android:layout_width="90dp"
        android:layout_height="29dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="14dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="72dp"
        android:text="@string/video_text"
        android:textAppearance="@style/videos_text"
        android:gravity="top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <RelativeLayout
        android:id="@+id/images"
        android:layout_width="339dp"
        android:layout_height="108dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="11dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="256dp"
        android:clipToOutline="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />
    <ImageView
        android:id="@+id/image_thumbnail"
        android:layout_width="339dp"
        android:layout_height="195.36dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/image_text"
        android:layout_width="90dp"
        android:layout_height="29dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="14dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="72dp"
        android:text="@string/image_text"
        android:textAppearance="@style/image_text"
        android:gravity="top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <RelativeLayout
        android:id="@+id/news"
        android:layout_width="339dp"
        android:layout_height="161dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="11dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="73dp"
        android:clipToOutline="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />
    <ImageView
        android:id="@+id/news1"
        android:layout_width="350dp"
        android:layout_height="197.05dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-35dp"
        android:background="@drawable/news1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <RelativeLayout
        android:id="@+id/navbar"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:clipToOutline="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <ImageView
        android:id="@+id/menu_btn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="11dp"
        android:layout_alignParentTop="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/menu_button" />
    <ImageView
        android:id="@+id/icon_2"
        android:layout_width="176dp"
        android:layout_height="42dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="98dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/nasa" />
    <ImageView
        android:id="@+id/icon_1"
        android:layout_width="117dp"
        android:layout_height="106.95dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="-19dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/nasa_logo" />


</androidx.constraintlayout.widget.ConstraintLayout>